# inscriptions

./: .gitignore  README.md  io.github.elly_code.inscriptions.devel.yml  io.github.elly_code.inscriptions.flathub.yml  io.github.elly_code.inscriptions.yml  meson.build  meson.options  meson_options.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yml
data/: Application.css  inscriptions.desktop.in.in  inscriptions.gresource.xml  inscriptions.gresource.xml.in  inscriptions.gschema.xml  inscriptions.gschema.xml.in  inscriptions.metainfo.xml.in  inscriptions.metainfo.xml.in.in  meson.build
data/icons/: meson.build
docs/: backstory.md  buildsystem.md  flatpak.md  other-packagings.md  shortcuts.md
po/: LINGUAS  POTFILES  de.po  fr.po  hr.po  inscriptions.pot  io.github.elly_code.inscriptions.pot  it.po  meson.build  sv.po
po/extra/: LINGUAS  POTFILES  de.po  extra.pot  fr.po  hr.po
src/: Application.vala  Config.vala.in  Constants.vala  meson.build
src/Backend/: Backend.vala  BackendTemplate.vala  DeepL.vala  Dummy.vala  Provider.vala
src/Backend/DeepL/: DeepL.vala  DeepLUtils.vala
src/Backend/Providers/: DeepL.vala  Dummy.vala  LibreTranslate.vala
src/Enums/: BackendType.vala  Backends.vala  Formality.vala  HeatmapLevel.vala  HighlightColor.vala  PossibleBackends.vala  ProviderType.vala  StatusCode.vala  ZoomLevel.vala  ZoomType.vala
src/Interfaces/: Zoomable.vala
src/Objects/: DDModel.vala  Lang.vala  Structs.vala
src/Services/: BackendController.vala  Secrets.vala  ZoomController.vala
src/Views/: ErrorView.vala  LogView.vala  MainStack.vala  TranslationView.vala  TweaksView.vala
src/Widgets/: ApiLevel.vala  ErrorBonusBox.vala  HeaderBar.vala  LanguageDropDown.vala  LanguageItem.vala  LanguageSelectionBox.vala  LogToolbar.vala  OrientationBox.vala  Pane.vala  RetryButton.vala  SendCodeButton.vala  SettingsPopover.vala  SourcePane.vala  SwitchWidget.vala  TargetPane.vala  TextView.vala  ZoomableTextView.vala  ZoomedWindow.vala
src/Widgets/Buttons/: OrientationBox.vala  RetryButton.vala  SendCodeButton.vala  ToggleHighlight.vala  TranslateButton.vala  ZoomBox.vala
src/Widgets/Panes/: Pane.vala  PaneSeparator.vala  SourcePane.vala  TargetPane.vala
src/Widgets/PopoverWidgets/: ApiEntry.vala  ApiLevel.vala
src/Widgets/Popovers/: OptionsPopover.vala  ProviderPopover.vala  SettingsPopover.vala
src/Windows/: MainWindow.vala
windows/: deploy.sh  loaders.cache  prep.sh
